# deslop

./: .gitignore  .pre-commit-hooks.yaml  Cargo.toml  README.md  SPEC.md  action.yml  deslop.toml.example
.agents/: ALGORITHM_AUDIT.md  GOAL.md  HEARTBEAT.md  LESSONS.md  M3_8_RESOLUTION_REPORT.md  NEXT_TASK.md  PLAN.md  RECIPE_CANARY_EVIDENCE.json  RECIPE_CANARY_REPORT.md  SESSION_REPORT.md  TODO.md
.agents/benchmarks/: m10_canonical_corpus_v1.json  m10_dogfood_report_v1.json  m10_external_projects_v1.json  m10_external_report_v1.json  m10_gate_report_v1.json  m10_release_evidence_v1.json  m6_llm_batch_input_v1.jsonl  m6_llm_batch_output_v1.jsonl  m6_llm_batch_v1.json  m6_llm_metadata_v1.json  m6_llm_report_v1.json  m6_llm_tasks_v1.json  m6_llm_upload_v1.json  m9_scale_report_v1.json
.github/workflows/: deslop.yml
crates/deslop-analyzer/: Cargo.toml
crates/deslop-analyzer/src/: agnostic.rs  boundary.rs  clojure.rs  julia.rs  lib.rs  refactor.rs  sibling_gate.rs  snapshot_refactor.rs  test_pack.rs  tests.rs  tokens.rs
crates/deslop-analyzer/src/packs/: javascript.rs  python.rs  rust.rs
crates/deslop-cli/: Cargo.toml
crates/deslop-cli/src/: main.rs
crates/deslop-cli/tests/: algorithm_contracts.rs  graph_resolution.rs  m0_definition_of_done.rs  m1_definition_of_done.rs  m2_definition_of_done.rs  propose_workorders.rs  recipes.rs  refactor_risk.rs  revision_guard.rs  scan_exit_codes.rs  work_order_protocol.rs
crates/deslop-core/: Cargo.toml
crates/deslop-core/src/: lib.rs  refactor_defect.rs  snapshot_pathology.rs
crates/deslop-eval/: Cargo.toml
crates/deslop-eval/evaluation/m8/: corpus.json  dataset_registry.json  evaluation_report.json
crates/deslop-eval/src/: lib.rs  m10_canonical.rs  m10_dogfood.rs  m10_external.rs  m10_release.rs  m6_benchmark.rs  m8_calibration.rs  m9_scale.rs  refactor_eval.rs
crates/deslop-eval/tests/: m6_definition_of_done.rs  m8_definition_of_done.rs  m9_definition_of_done.rs
crates/deslop-external/: Cargo.toml
crates/deslop-external/src/: lib.rs
crates/deslop-fix/: Cargo.toml
crates/deslop-fix/src/: lib.rs
crates/deslop-graph/: Cargo.toml
crates/deslop-graph/src/: builder.rs  contract.rs  extract.rs  ids.rs  lib.rs  render.rs  types.rs
crates/deslop-lang/: Cargo.toml
crates/deslop-lang/src/: control_flow.rs  lib.rs  resolution.rs
crates/deslop-lsp/: Cargo.toml
crates/deslop-lsp/src/: lib.rs  main.rs
crates/deslop-mcp/: Cargo.toml
crates/deslop-mcp/src/: lib.rs  spec.rs
crates/deslop-metrics/: Cargo.toml
crates/deslop-metrics/src/: lib.rs
crates/deslop-mutate/: Cargo.toml
crates/deslop-mutate/src/: lib.rs
crates/deslop-parse/: Cargo.toml
crates/deslop-parse/src/: adapter.rs  aggregation.rs  architecture.rs  arena.rs  clone_candidate_index.rs  containment.rs  contract_history.rs  control_flow.rs  control_regions.rs  cycle_seam.rs  data_flow.rs  dependency.rs  graph_eligibility.rs  identity.rs  incremental.rs  instrumentation.rs  lib.rs  module_restructure.rs  non_structured_control.rs  planner.rs  program_dependence.rs  project_cache.rs  project_invalidation.rs  project_runtime.rs  project_session.rs  query.rs  resolution.rs  resolution_gate.rs  resolution_traversal.rs  scope_graph.rs  semantic_resolution.rs  snapshot.rs  subtree_fingerprint.rs  system_dependence.rs
crates/deslop-protocol/: Cargo.toml
crates/deslop-protocol/src/: lib.rs  lifecycle.rs  planner.rs  recipe.rs  service.rs  work_order.rs
crates/deslop-recipes/: Cargo.toml
crates/deslop-recipes/corpus/: unreachable_literal_rust_v1.json
crates/deslop-recipes/evaluation/: unreachable_literal_rust_v1_report.json
crates/deslop-recipes/src/: branch.rs  branch_split.rs  branch_terminal.rs  clarity.rs  condition_merge.rs  contract.rs  definition_of_done.rs  evaluation.rs  extract_method.rs  guard_clause.rs  impact.rs  inline_helper.rs  lib.rs  local_cleanup.rs  ordering.rs  project.rs  semantic_evidence.rs  unreachable.rs
crates/deslop-report/: Cargo.toml
crates/deslop-report/src/: lib.rs
crates/deslop-slim/: Cargo.toml
crates/deslop-slim/src/: lib.rs
crates/deslop-verify/: Cargo.toml
crates/deslop-verify/src/: atomic.rs  authority.rs  demotion.rs  evidence.rs  lib.rs  recipe.rs  runtime.rs  transaction.rs
crates/deslop-verify/tests/: m7_definition_of_done.rs
deslop/: findings.py  fixer.py  lang.py  regions.py  scanner.py
deslop/rules/: __init__.py  agnostic.py  clojure.py  julia.py
docs/: ADAPTER_AUTHORING.md  AGENT_INTEGRATION.md  CI.md  CONFIG.md  M10_CAPABILITY_MATRIX.md  M10_FAILURE_RISK_REGISTER.md  M10_MIGRATION.md  M10_RELEASE_REPORT.md  M7_CAPABILITY_MATRIX.md  M7_MIGRATION.md  M8_CAPABILITY_MATRIX.md  M8_DATASET_REPORT.md  M8_MIGRATION.md  M8_MODEL_CARD.md  M8_PILOT_PROTOCOL.md  M9_CAPABILITY_MATRIX.md  M9_MIGRATION.md  REFACTOR_DEFECT_ACCUMULATION.md  SECURITY.md  UNDO_RECOVERY.md  VERIFIER_POLICY.md
docs/adr/: 0001-project-analysis.md  0002-scope-and-name-resolution.md  0003-control-flow-schema.md  0004-dominance-and-control-regions.md  0005-explicit-non-structured-control-regions.md  0006-dataflow-and-effects.md  0007-local-program-dependence-graphs.md  0008-interprocedural-summaries-and-system-dependence.md  0009-verification-authority.md  0010-readability-calibration-authority.md  0011-incremental-project-scale.md
tests/corpus/: baseline.json  manifest.json
tests/corpus/clean/: clojure_clean.clj  julia_clean.jl  python_clean.py  rust_clean.rs  slop_clean.clj  slop_clean.jl  slop_clean.rs  typescript_clean.ts
tests/corpus/sloppy/: clojure_idioms.clj  comments_and_blanks.clj  duplication.rs  javascript_idioms.js  julia_idioms.jl  narration.jl  narration.rs  python_idioms.py  rust_idioms.rs  slop_clojure.clj  slop_julia.jl  slop_rust.rs  unused.jl
tests/fixtures/: m4_graph_gold.json  resolution_m3_7_adversarial_gold.json
tests/fixtures/clean/: precision_fp.rs  structural.clj  structural.jl  structural.rs
tests/fixtures/clojure/: adapter_matrix.clj  control_edges.clj  (+2 more)
tests/refactor-history/: baseline.json  manifest.json  promotion.json
tests/refactor-snapshot/: manifest.json
(+69 files in other folders)
