[package]
name = "deslop-analyzer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
deslop-core.workspace = true
deslop-external.workspace = true
deslop-lang.workspace = true
deslop-parse.workspace = true
globset.workspace = true
ignore.workspace = true
regex.workspace = true
tree-sitter.workspace = true

[dev-dependencies]
tempfile.workspace = true
