[package]
name = "deslop-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
deslop-analyzer.workspace = true
deslop-core.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true

[[bin]]
name = "m6-llm-benchmark"
path = "src/bin/m6_llm_benchmark.rs"

[dev-dependencies]
deslop-parse.workspace = true
tempfile.workspace = true
