[package]
name = "deslop-eval"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
deslop-analyzer.workspace = true
deslop-core.workspace = true
deslop-graph.workspace = true
deslop-lang.workspace = true
deslop-metrics.workspace = true
deslop-parse.workspace = true
deslop-protocol.workspace = true
deslop-recipes.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true

[[bin]]
name = "m6-llm-benchmark"
path = "src/bin/m6_llm_benchmark.rs"

[[bin]]
name = "m8-calibration"
path = "src/bin/m8_calibration.rs"

[[bin]]
name = "m9-scale-benchmark"
path = "src/bin/m9_scale_benchmark.rs"

[[bin]]
name = "m10-canonical-corpus"
path = "src/bin/m10_canonical_corpus.rs"

[[bin]]
name = "m10-external-eval"
path = "src/bin/m10_external_eval.rs"

[[bin]]
name = "m10-dogfood"
path = "src/bin/m10_dogfood.rs"

[[bin]]
name = "m10-release"
path = "src/bin/m10_release.rs"

[dev-dependencies]
deslop-parse.workspace = true
tempfile.workspace = true
