[package]
name = "deslop-lsp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
deslop-analyzer.workspace = true
deslop-core.workspace = true
deslop-fix.workspace = true
deslop-parse.workspace = true
deslop-protocol.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
serde.workspace = true
toml.workspace = true
serde_json.workspace = true

[[bin]]
name = "deslop-lsp"
path = "src/main.rs"

[dev-dependencies]
tempfile.workspace = true
