[package]
name = "deslop-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
deslop-analyzer.workspace = true
deslop-core.workspace = true
deslop-metrics.workspace = true
deslop-parse.workspace = true
deslop-protocol.workspace = true
deslop-report.workspace = true
deslop-slim = { workspace = true, default-features = false }
deslop-verify.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[features]
default = []
slim-llm = ["deslop-slim/anthropic", "deslop-slim/openai"]

[dev-dependencies]
tempfile.workspace = true
