[package]
name = "deslop-parse"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
deslop-core.workspace = true
deslop-lang.workspace = true
ignore.workspace = true
serde.workspace = true
tree-sitter.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
