[package]
name = "deslop-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
deslop-analyzer.workspace = true
deslop-core.workspace = true
deslop-parse.workspace = true
deslop-recipes.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
