[package]
name = "deslop-recipes"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
deslop-core.workspace = true
deslop-parse.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
deslop-lang.workspace = true
tempfile.workspace = true
tree-sitter.workspace = true
