[package]
name = "deslop-report"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
deslop-core.workspace = true
deslop-parse.workspace = true
deslop-protocol.workspace = true
serde.workspace = true
serde_json.workspace = true
