[package]
name = "deslop-slim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
deslop-analyzer.workspace = true
deslop-core.workspace = true
deslop-parse.workspace = true
deslop-protocol.workspace = true
deslop-verify.workspace = true
serde.workspace = true
serde_json.workspace = true
ureq = { workspace = true, optional = true }

[features]
default = ["anthropic", "openai"]
anthropic = ["dep:ureq"]
openai = ["dep:ureq"]

[dev-dependencies]
tempfile.workspace = true
