[package]
name = "deslop-verify"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
deslop-analyzer.workspace = true
deslop-core.workspace = true
deslop-mutate.workspace = true
deslop-parse.workspace = true
deslop-protocol.workspace = true
deslop-recipes.workspace = true
ignore.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
wait-timeout.workspace = true
